# TempoApp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/feature/: CMakeLists.txt  main.cpp
examples/minimal/: CMakeLists.txt  main.cpp
include/: tempo.h
src/: config.cpp  config.h  events.cpp  events.h  internal.h  jobscheduler.cpp  jobscheduler.h  keyboard_shortcuts.cpp  keyboard_shortcuts.h  log.cpp  log.h  tempo.cpp  utils.cpp  utils.h
src/glfw_handler/: glfw_window_handler.cpp  glfw_window_handler.h
src/text/: font_manager.cpp  fonts.cpp  fonts.h  fonts_private.h  fonts_public.h
